allprojects {
    apply plugin: 'java'
    apply plugin: 'eclipse'
    apply plugin: 'idea'
    apply plugin: 'groovy'

    repositories {
        mavenCentral()
        mavenLocal()
    }

    ext.versionMajor = 1
    ext.versionMinor = 0
    ext.versionPatch = 0
    version = ext.versionMajor + '.' + ext.versionMinor + '.' + ext.versionPatch

    apply plugin: 'java'
    apply plugin: 'eclipse'
    apply plugin: 'idea'
    apply plugin: 'groovy'

    sourceCompatibility = 11
    targetCompatibility = 11

    apply from: rootProject.rootDir.toPath().resolve('gradle/read_version.gradle')

    dependencies {
        testImplementation 'org.codehaus.groovy:groovy:3.0.10'
        testImplementation platform("org.spockframework:spock-bom:2.1-groovy-3.0")
        testImplementation "org.spockframework:spock-core"
    }

    test {
        useJUnitPlatform()
        testLogging {
            events "passed", "skipped", "failed"
        }
    }

    tasks.withType(JavaCompile) {
        // necessary for spock to avoid error with org.codehaus.groovy.vmplugin.v7.Java7$1
        sourceCompatibility = 11
        targetCompatibility = 11
        // for debugging purposes to show unchecked issues
        options.compilerArgs << '-Xlint:unchecked'
        options.deprecation = true
        options.encoding = "UTF-8"
    }

    tasks.withType(Test) {
        // necessary for spock to avoid error with org.codehaus.groovy.vmplugin.v7.Java7$1
        sourceCompatibility = 11
        targetCompatibility = 11
    }
}
